# nei

./: CMakeLists.txt  README.md
doc/: architecture.md
experimental/: CMakeLists.txt  analyser.cpp
include/nei/: analyser.hpp  analyser.tpp  buffer.hpp  concept.hpp  entity.hpp  entity.tpp  environment.hpp  log.hpp  ndarray.hpp  sense.hpp  sense.tpp  type.hpp  universe.hpp  utility.hpp
include/nei/utility/: bitset.hpp  bitset.tpp
source/nei/: main.cpp
src/nei/: main.cpp
